--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@elevenlabs/elevenlabs-js": "^2.0.0",
-    "@google-cloud/speech": "^7.1.0",
+    "@azure/msal-node": "^2.16.2",
+    "@elevenlabs/elevenlabs-js": "^2.3.0",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
