--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "node-fetch": "^3.3.2",
     "openai": "^5.3.0",
     "twilio": "^5.7.0"
