--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "https": "^1.0.0",
     "node-fetch": "^3.3.2",
     "openai": "^5.3.0",
+    "stream": "^0.0.3",
     "twilio": "^5.7.0"
   }
 }
