--- a/package.json
+++ b/package.json
@@ -11,19 +11,29 @@
   "engines": {
     "node": "18.x"
   },
-  "keywords": ["voice", "ai", "plumbing", "twilio", "openai", "elevenlabs"],
+  "keywords": [
+    "voice",
+    "ai",
+    "plumbing",
+    "twilio",
+    "openai",
+    "elevenlabs"
+  ],
   "author": "Your Name",
   "license": "ISC",
   "description": "Smart Voice AI for plumbing business with Twilio, OpenAI, ElevenLabs, and Microsoft Outlook integration",
   "dependencies": {
     "@azure/msal-node": "^2.16.2",
+    "@deepgram/sdk": "^4.9.1",
     "@elevenlabs/elevenlabs-js": "^2.3.0",
     "axios": "^1.9.0",
+    "deepgram": "^1.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "https": "^1.0.0",
     "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.10",
     "openai": "^5.3.0",
     "stream": "^0.0.3",
     "twilio": "^5.7.0"
