--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "https": "^1.0.0",
+    "ngrok": "^5.0.0-beta.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "openai": "^5.3.0",
