--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "nodemon": "^3.1.10",
     "openai": "^5.3.0",
     "stream": "^0.0.3",
-    "twilio": "^5.7.0"
+    "twilio": "^5.7.0",
+    "googleapis": "^105.0.0",
+    "google-auth-library": "^8.0.0"
   }
 }
