--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "google-auth-library": "^8.9.0",
+    "googleapis": "^105.0.0",
     "https": "^1.0.0",
     "ngrok": "^5.0.0-beta.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "openai": "^5.3.0",
     "stream": "^0.0.3",
-    "twilio": "^5.7.0",
-    "googleapis": "^105.0.0",
-    "google-auth-library": "^8.0.0"
+    "twilio": "^5.7.0"
   }
 }
