--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemon": "^3.1.10",
     "openai": "^5.3.0",
     "stream": "^0.0.3",
-    "twilio": "^5.7.0"
+    "twilio": "^5.7.0",
+    "ws": "^8.18.3"
   }
 }
