feat(nlp): Enhance NLP response handling with caching, performance tracking, and preloaded responses
- Implemented caching for simple NLP responses to improve response time.
- Added a response time tracker to monitor and calculate average response times.
- Preloaded common responses for instant replies to frequently asked questions.
- Optimized the system prompt to avoid unnecessary repetition of the agent's name.
- Adjusted caching logic to only store simple responses and increased cache size.
- Reduced token usage and adjusted model parameters for faster, more predictable responses.

feat(outlook): Improve appointment handling and error logging in Google Calendar integration

- Increased the number of events fetched to filter for plumbing-related appointments.
- Enhanced filtering logic to exclude non-appointment events like birthdays.
- Added detailed network error logging for appointment creation failures.
- Implemented a fallback mechanism to create a mock appointment record during network issues.

chore(package): Update dependencies and add new packages for email and graph API

- Added dependencies for EmailJS and Microsoft Graph client.
- Updated existing dependencies to their latest versions.

chore(eslint): Initialize ESLint configuration for consistent code style

- Created a basic ESLint configuration enforcing single quotes for strings.

--- a/.gitignore
+++ b/.gitignore
@@ -65,4 +65,33 @@ Thumbs.db
 *.tmp
 *.temp
 
+# Test files
+test-*.js
+*test*.js
+mock-*.js
+simple-*.js
+terminal-*.js
+check-*.js
+live-call-*.js
+
+# Documentation and report files (keep only essential ones)
+*_APPLIED.md
+*_COMPLETE.md
+*_FIXES*.md
+*_REPORT.md
+*_GUIDE.md
+*_STATUS*.md
+*_OPTIMIZATIONS*.md
+LATENCY_OPTIMIZATIONS*.md
+BOOKING_FLOW_FIX*.md
+EMAIL_STATUS*.md
+TERMINAL_CHAT*.md
+
+# Service files that are tests
+env-checker.js
+fix-summary.js
+notifications.js
+professional-email-service.js
+simple-email-service.js
+
 
