--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"No tests specified\" && exit 0",
+    "test": "node test-voice-bot.js",
+    "test:env": "node test-voice-bot.js --env",
+    "test:api": "node test-voice-bot.js --api",
+    "test:conv": "node test-voice-bot.js --conv",
+    "test:perf": "node test-voice-bot.js --perf",
     "start": "node index.js",
     "dev": "nodemon index.js",
     "postinstall": "echo 'Deployment completed successfully'"
@@ -26,6 +30,9 @@
     "@azure/msal-node": "^2.16.2",
     "@deepgram/sdk": "^3.13.0",
     "@elevenlabs/elevenlabs-js": "^2.3.0",
+    "@emailjs/browser": "^4.4.1",
+    "@emailjs/nodejs": "^5.0.2",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "axios": "^1.9.0",
     "deepgram": "^1.0.3",
     "dotenv": "^16.5.0",
@@ -36,8 +43,11 @@
     "https": "^1.0.0",
     "ngrok": "^5.0.0-beta.2",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "openai": "^5.3.0",
+    "ping": "^0.4.4",
+    "slack-webhook": "^1.0.0",
     "stream": "^0.0.3",
     "twilio": "^5.7.0",
     "ws": "^8.18.3"
